fix up some styling (wrap, italics)

--- a/css/Exhibition.css
+++ b/css/Exhibition.css
@@ -30,7 +30,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: 65%;
-    height: fit-content;
+    flex-wrap: wrap;
 }
 
 .artist-dot {
@@ -66,10 +66,11 @@ body {
     max-height: 100%;
     height: 100%;
     width: 60%;
+    background-color: lightgrey;
 }
 
 .carousel-item {
-    height: 76vh;
+    height: 77vh;
     padding: 0em 2em;
 }
 
@@ -77,8 +78,8 @@ body {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    align-self: center;
-    /* background-color: lightgrey; */
+    align-self: center; 
+    box-shadow: 0 0 1.3em #7a7a7a;
 }
 
 .carousel-control-prev, .carousel-control-next {
@@ -94,6 +95,12 @@ body {
     justify-content: center;
     font-size: 14px;
     line-height: 1.7;
+}
+
+.quote {
+    font-style: italic;
+    line-height: 1.8;
+    font-size: 15px;
 }
 
 .image-with-caption {
@@ -137,6 +144,7 @@ a:hover {
 #footer {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     /* height: 5vh; */
     padding: 2vh;
     align-items: center;
@@ -163,4 +171,10 @@ a:hover {
     font-family: Roboto;
     src: url(fonts/Roboto-Bold.ttf);
     font-weight: 700;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(fonts/Roboto-Italic.ttf);
+    font-style: italic;
 }
